# wasm-micro-runtime

./: BUILD.bazel  test_unaligned_access.txt  wasm_native.c
.github/ISSUE_TEMPLATE/: report_issue.md
.github/scripts/: codeql_buildscript.sh
.github/workflows/: build_llvm_libraries.yml  build_wamr_lldb.yml  codeql.yml  codeql_buildscript.sh  compilation_on_android_ubuntu.yml  compilation_on_macos.yml  fail_on_error.py  nightly_run.yml
build-scripts/: SConscript_config  config_common.cmake  runtime_lib.cmake
ci/: validate_lldb.py
core/: config.h
core/iwasm/aot/: aot_loader.c  aot_reloc.h  aot_runtime.c  aot_runtime.h
core/iwasm/common/: wasm_application.c  wasm_c_api.c  wasm_c_api_internal.h  wasm_exec_env.c  wasm_exec_env.h  wasm_memory.c  wasm_native.c  wasm_native.h  wasm_runtime_common.c  wasm_runtime_common.h
core/iwasm/compilation/: aot_compiler.c  aot_compiler.h  aot_emit_exception.c  aot_emit_function.c  aot_emit_memory.c  aot_emit_table.c  aot_emit_variable.c  aot_llvm.c  aot_llvm.h  aot_llvm_extra.cpp
core/iwasm/fast-jit/: jit_frontend.c
core/iwasm/include/: aot_comp_option.h  aot_export.h  wasm_c_api.h  wasm_export.h
core/iwasm/interpreter/: wasm.h  wasm_interp.h  wasm_interp_classic.c  wasm_interp_fast.c  wasm_loader.c  wasm_mini_loader.c  (+1 more)
doc/: memory_usage.md
samples/multi-module/: CMakeLists.txt
test-tools/wasm-dwarf-dump/: binaryen.patch  build.sh
test-tools/wasm-sourcemap-dump/: CMakeLists.txt
test-tools/wasm-sourcemap-dump/src/: main.c
tests/wamr-test-suites/: test_wamr.sh
wamr-compiler/: CMakeLists.txt  main.c
(+60 files in other folders)
